--- a/src/styles/Estatistica.module.css
+++ b/src/styles/Estatistica.module.css
@@ -9,8 +9,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 180px;
-  height: 180px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   font-size: 4rem;
 }
@@ -19,4 +19,12 @@
   color: #DDD;
   font-size: 1.7rem;
   font-weight: 200;
+}
+
+@media (max-width: 768px) {
+  .valor {
+    width: 100px;
+    height: 100px;
+    font-size: 2rem;
+  }
 }
