--- a/src/styles/Resposta.module.css
+++ b/src/styles/Resposta.module.css
@@ -1,7 +1,8 @@
 .resposta {
   display: flex;
-  min-width: 500px;
-  width: 80%;
+  min-width: 280px;
+  max-width: 600px;
+  width: 100%;
   height: 70px;
   margin: 12px 0;
 
